--- a/Graphs2/Graphs2/Graphs2.vcxproj.filters
+++ b/Graphs2/Graphs2/Graphs2.vcxproj.filters
@@ -15,25 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
-    <ClCompile Include="unittest1.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Bridges1\main.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="input1.txt" />
+    <Text Include="input.txt">
+      <Filter>Файлы исходного кода</Filter>
+    </Text>
+    <Text Include="output.txt">
+      <Filter>Файлы исходного кода</Filter>
+    </Text>
   </ItemGroup>
 </Project>
